--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 target/
+**/target/
+*.rs.bk
+.rustup/
+Cargo.lock
+.idea/
+.vscode/
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*.log
+*.dSYM/
+*.pdb
+*.bak
